@startuml
interface AppAPI {
    + getWorkers(): Call<List<Worker>>
    + getAdminData(): Call<AdminResponse>
    + getWorkerData(): Call<WorkerResponse>
    + logout(): Call<ResponseBody>
    + register(login: String, password: String): Call<ResponseBody>
}

class Call<T> {
}

class List<T> {
}

class Worker {
}

class AdminResponse {
}

class WorkerResponse {
}

class ResponseBody {
}

AppAPI --|> Object
Call --|> Object
List --|> Object
Worker --|> Object
AdminResponse --|> Object
WorkerResponse --|> Object
ResponseBody --|> Object

@enduml
